--- a/src/TShop/frontend/src/index.css
+++ b/src/TShop/frontend/src/index.css
@@ -8,3 +8,27 @@
 .btn-svg{
   color: black;
 }
+
+.nav-link{
+  color: black;
+}
+
+.nav-link:hover{
+  color:#616161;
+}
+
+.icon-link{
+  color: black;
+}
+
+.icon-link:hover{
+  color: black;
+}
+
+.btn-store-main{
+  background-color: black;
+}
+
+.btn-store-main:hover{
+  background-color:#616161;
+}
