--- a/src/TShop/frontend/templates/frontend/index.html
+++ b/src/TShop/frontend/templates/frontend/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <title>Online Store</title>
+    {% load static %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://unpkg.com/reactstrap@6.0.1/dist/reactstrap.full.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/index.css' %}">
+    
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -13,7 +18,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
   </head>
   <body>
     <div id="root"></div>
@@ -27,5 +31,7 @@
       To begin the development, run `npm start`.
       To create a production bundle, use `npm run build`.
     -->
+    <script src="{% static "frontend/main.js" %}"></script>
   </body>
 </html>
+
